@@ -1,3 +1,6 @@
+/*
+ * Chr(36) + "Id" + Chr(36)
+ */
 
 README 23/12/2003 - Harbour Low Level api for Postgres RDBMS
 
