@@ -1,3 +1,7 @@
+/*
+ * Chr(36) + "Id" + Chr(36)
+ */
+
 :@echo off
 
 if "%1" == "clean" goto CLEAN
