@@ -1,3 +1,7 @@
+/*
+ * Chr(36) + "Id" + Chr(36)
+ */
+
 #include "common.ch"
 
 Function main()
